--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "vite dev",
     "build": "vite build"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,8 +27,11 @@
     "vite": "^7.0.4"
   },
   "devDependencies": {
+    "@prisma/client": "^6.12.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "prisma": "^6.12.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
