--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "tanstack-from-scratch",
+  "name": "tanstack-start-event-calendar",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "packageManager": "pnpm@9.1.0",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build"
+    "build": "vite build",
+    "format": "prettier --write .",
+    "lint": "eslint ."
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -27,12 +29,22 @@
     "vite": "^7.0.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@prisma/client": "^6.12.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
