--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "packageManager": "pnpm@9.1.0",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --port=4000",
     "build": "vite build",
     "format": "prettier --write .",
     "lint": "eslint ."
