--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite dev --port=4000",
     "build": "vite build",
+    "start": "node .output/server/index.mjs",
     "format": "prettier --write .",
     "lint": "eslint ."
   },
@@ -34,6 +35,7 @@
     "@prisma/client": "^6.12.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
